--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 	<!-- Google MAterial Icons-->
 	<link rel="stylesheet" href="./css/main.css" />
 
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+		integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+		integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- SWIPER -->
+	<link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
+	<script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+
 	<script defer src="./js/main.js"></script> <!-- defer : html 구조이 다 해석이 되면 정상적으로 동작해라 -->
 </head>
 
@@ -66,7 +77,6 @@
 					<div class="material-icons">search</div> <!-- 아이콘 -->
 				</div>
 			</div>
-
 			<ul class="main-menu">
 				<li class="item">
 					<div class="item__name">COFFEE</div>
@@ -366,7 +376,108 @@
 				</li>
 			</ul>
 		</div>
+
+		<div class="badges">
+			<div class="badge">
+				<img src="./images/badge1.jpg" alt="badge" />
+			</div>
+			<div class="badge">
+				<img src="./images/badge2.jpg" alt="badge" />
+			</div>
+		</div>
 	</header>
+
+	<section> <!-- 기능적으로 동작하는 부분은 없음 -->
+		<!-- VISUAL -->
+		<div class="visual">
+			<div class="inner">
+
+				<div class="title fade-in">
+					<img src="./images/visual_title.png" , alt="STARBUCKS DELIGHTFUL START TO THE YEARS ">
+					<a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
+				</div>
+				<div class="fade-in">
+					<img src="./images/visual_cup1.png" alt="new OTEMEAL LATTE" class="cup1 image" />
+					<img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
+				</div>
+				<div class="fade-in">
+					<img src="./images/visual_cup2.png" alt="new STABUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
+					<img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+				</div>
+				<div class="fade-in">
+					<img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+
+	<section class="notice">
+		<div class="notice-line">
+			<div class="bg-left"></div>
+			<div class="bg-right"></div>
+			<div class="inner">
+
+				<div class="inner__left">
+					<h2>공지사항</h2>
+					<div class="swiper-container">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<a href="javascript:void(0)">크리스마스 & 연말연시 스타벅스 매장 영업시간 변경 안내</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="javascript:void(0)">[당첨자 발표] 2021 스타벅스 플래너 영수증 이벤트</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="javascript:void(0)">스타벅스커피 코리아 애플리케이션 버전 업데이트</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="javascript:void(0)">[당첨자 발표] 뉴이어 전자영수증 이벤트</a>
+							</div>
+						</div>
+					</div>
+					<a href="javascript:void(0)" class="notice-line__more">
+						<div class="material-icons">add_circle</div>
+					</a>
+				</div>
+				<div class="inner__right">
+					<h2>스타벅스 프로모션</h2>
+					<div class="toggle-promotion">
+						<div class="material-icons">upload</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="promotion">
+			<div class="swiper-container">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
+						<a href="javascript:void(0)" class="btn">자세히 보기</a>
+					</div>
+					<div class="swiper-slide">
+						<img src="./images/promotion_slide2.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
+						<a href="javascript:void(0)" class="btn">자세히 보기</a>
+					</div>
+					<div class="swiper-slide">
+						<img src="./images/promotion_slide3.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
+						<a href="javascript:void(0)" class="btn">자세히 보기</a>
+					</div>
+					<div class="swiper-slide">
+						<img src="./images/promotion_slide4.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
+						<a href="javascript:void(0)" class="btn">자세히 보기</a>
+					</div>
+					<div class="swiper-slide">
+						<img src="./images/promotion_slide5.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!">
+						<a href="javascript:void(0)" class="btn">자세히 보기</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
