--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
 	<script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
+	<script defer src="./js/youtube.js"></script>
 	<script defer src="./js/main.js"></script> <!-- defer : html 구조이 다 해석이 되면 정상적으로 동작해라 -->
 </head>
 
@@ -476,7 +477,37 @@
 					</div>
 				</div>
 			</div>
+			<div class="swiper-pagination"></div>
+			<div class="swiper-prev">
+				<div class="material-icons">arrow_back</div>
+			</div>
+			<div class="swiper-next">
+				<div class="material-icons">arrow_forward</div>
+			</div>
 		</div>
+	</section>
+
+
+	<!-- REWARDS -->
+	<section class="rewards">
+		<div class="bg-left"></div>
+		<div class="bg-right"></div>
+		<div class="inner">
+			<div class="btn-group">
+				<div class="btn btn--reverse sign-up">회원가입</div>
+				<div class="btn sign-in">로그인</div>
+				<div class="btn gift">e-Gift 선물하기</div>
+			</div>
+
+		</div>
+	</section>
+
+
+	<section class="youtube">
+		<div class="youtube__area">
+			<div id="player"></div>
+		</div>
+		<div class="youtube__cover"></div>
 	</section>
 </body>
 
