--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
 		integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+	<!-- GSAP & SCROLLTOPLUGIN -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js" integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<!-- SWIPER -->
 	<link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
 	<script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
@@ -683,6 +686,10 @@
 			<img src="./images/starbucks_logo_only_text.png" alt="" class="logo /">
 		</div>
 	</footer>
+
+	<div id="to-top">
+		<div class="material-icons">arrow_upward</div>
+	</div>
 </body>
 
 </html>
